[gd_scene load_steps=9 format=2]

[ext_resource path="res://img/rectangulonegro.png" type="Texture" id=1]
[ext_resource path="res://MainTitle.gd" type="Script" id=2]
[ext_resource path="res://img/progress_bar/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://img/progress_bar/twitter-app-icon-transparent-17.jpg.png" type="Texture" id=4]
[ext_resource path="res://escenas/zombie/zombie.tscn" type="PackedScene" id=5]
[ext_resource path="res://img/progress_bar/fuente_tw.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 6 )

[node name="Win" type="TextureRect"]
margin_left = -114.738
margin_top = -196.165
margin_right = 485.262
margin_bottom = 403.835
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -0.879059
margin_top = -122.155
margin_right = -0.879028
margin_bottom = -89.155
rect_pivot_offset = Vector2( 314.485, 16.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.494118, 0.858824, 0.109804, 1 )
text = "YOU WON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.85312
margin_top = -79.2986
margin_right = -1.85309
margin_bottom = -46.2986
rect_pivot_offset = Vector2( 314.485, 16.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -53.824
margin_top = 47.1707
margin_right = 96.176
margin_bottom = 76.1707
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.968627, 0.968627, 0.968627, 1 )
text = "@Ana_B_R_A @MiguelLentisco @Victillos1920 @JDuckito @Victor_Seven7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.525
margin_top = -40.0
margin_right = -37.525
margin_bottom = -8.0
text = "Try again: easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.975
margin_top = -40.0
margin_right = 137.975
margin_bottom = -8.0
text = "Try again: hard"

[node name="Button3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_right = 52.5
margin_bottom = 32.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 79.0113
margin_top = 348.055
margin_right = 591.011
margin_bottom = 860.055
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="zombie" parent="." instance=ExtResource( 5 )]
position = Vector2( 45.2138, 323.325 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
