[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/rectangulonegro.png" type="Texture" id=1]
[ext_resource path="res://MainTitle.gd" type="Script" id=2]
[ext_resource path="res://img/progress_bar/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[node name="MainTitle" type="TextureRect"]
margin_left = -114.738
margin_top = -196.165
margin_right = 485.262
margin_bottom = 403.835
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -0.879059
margin_top = -122.155
margin_right = -0.879028
margin_bottom = -108.155
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.8, 0.0705882, 1 )
text = "Corona Zombi"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 252.494
margin_top = 284.398
margin_right = 349.494
margin_bottom = 316.398
text = "Start"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
